Added check in server for script files already included in the keynote files; Write the scripts in if they don't exist

--- a/public/assets/player/KeynoteDHTMLPlayer.html
+++ b/public/assets/player/KeynoteDHTMLPlayer.html
@@ -14,6 +14,12 @@
 		<meta name="viewport" content="initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width" />
 
 <script type="text/javascript" src="prototype.js"></script>
+
+<!-- My Scripts -->
+<script src="/socket.io/socket.io.js"></script>
+<script src="../../js/fallback_presentation.js"></script>
+<!-- End My Scripts -->
+
 <script type="text/javascript" src="DebuggingSupport.js"></script>
 
 <script type="text/javascript" src="string.js"></script>
@@ -27,11 +33,6 @@
 <script type="text/javascript" src="ScriptManager.js"></script>
 <script type="text/javascript" src="OrientationController.js"></script>
 <script type="text/javascript" src="DocumentInfo.js"></script>
-
-<!-- My Scripts -->
-<script src="/socket.io/socket.io.js"></script>
-<script src="../../js/presentation.js"></script>
-<!-- End My Scripts -->
 
 <script type="text/javascript" src="KeynoteDHTMLPlayer.js"></script>
 
